--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,9 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/service-worker.js",
+              "src/manifest.webmanifest"
             ],
             "styles": [
               "src/styles.css"
@@ -87,7 +89,9 @@
             "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "service-worker.js",
+              "manifest.webmanifest"
             ],
             "styles": [
               "src/styles.css"
